--- a/WindowsApplication1/Main.resx
+++ b/WindowsApplication1/Main.resx
@@ -120,10 +120,93 @@
   <metadata name="MenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="StatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="NotifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>132, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="NotifyIcon1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAQAEBAQAAEABAAoAQAARgAAABAQAAABAAgAaAUAAG4BAAAgIBAAAQAEAOgCAADWBgAAICAAAAEA
+        CACoCAAAvgkAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAABAAAAAAAAAAAACAAACA
+        AAAAgIAAgAAAAIAAgACAgAAAwMDAAICAgAAAAP8AAP8AAAD//wD/AAAA/wD/AP//AAD///8AAAAMzMzA
+        AAAADMzMzMzAAADMzMzMzMwADMzP///8zMAMzP/////MwMzP/MzMz/zMzP/MzMzM/8zMzMzMzMzMzMzM
+        zPzPzMzMzMzP/M/8zMzMzM/8z/zMzAzM/8zM/8zADMz8zMzPzMAAzMzMzMzMAAAMzMzMzMAAAAAMzMzA
+        AAD4HwAA4AcAAMADAACAAQAAgAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIABAACAAQAAwAMAAOAH
+        AAD4HwAAKAAAABAAAAAgAAAAAQAIAAAAAAAAAQAAAAAAAAAAAAAAAQAAAAEAAAAAAAAAAIAAAIAAAACA
+        gACAAAAAgACAAICAAADAwMAAwNzAAPDKpgAAAD4AAABdAAAAfAAAAJsAAAC6AAAA2QAAAPAAJCT/AEhI
+        /wBsbP8AkJD/ALS0/wAAFD4AAB5dAAAofAAAMpsAADy6AABG2QAAVfAAJG3/AEiF/wBsnf8AkLX/ALTN
+        /wAAKj4AAD9dAABUfAAAaZsAAH66AACT2QAAqvAAJLb/AEjC/wBszv8AkNr/ALTm/wAAPj4AAF1dAAB8
+        fAAAm5sAALq6AADZ2QAA8PAAJP//AEj//wBs//8AkP//ALT//wAAPioAAF0/AAB8VAAAm2kAALp+AADZ
+        kwAA8KoAJP+2AEj/wgBs/84AkP/aALT/5gAAPhQAAF0eAAB8KAAAmzIAALo8AADZRgAA8FUAJP9tAEj/
+        hQBs/50AkP+1ALT/zQAAPgAAAF0AAAB8AAAAmwAAALoAAADZAAAA8AAAJP8kAEj/SABs/2wAkP+QALT/
+        tAAUPgAAHl0AACh8AAAymwAAPLoAAEbZAABV8AAAbf8kAIX/SACd/2wAtf+QAM3/tAAqPgAAP10AAFR8
+        AABpmwAAfroAAJPZAACq8AAAtv8kAML/SADO/2wA2v+QAOb/tAA+PgAAXV0AAHx8AACbmwAAuroAANnZ
+        AADw8AAA//8kAP//SAD//2wA//+QAP//tAA+KgAAXT8AAHxUAACbaQAAun4AANmTAADwqgAA/7YkAP/C
+        SAD/zmwA/9qQAP/mtAA+FAAAXR4AAHwoAACbMgAAujwAANlGAADwVQAA/20kAP+FSAD/nWwA/7WQAP/N
+        tAA+AAAAXQAAAHwAAACbAAAAugAAANkAAADwAAAA/yQkAP9ISAD/bGwA/5CQAP+0tAA+ABQAXQAeAHwA
+        KACbADIAugA8ANkARgDwAFUA/yRtAP9IhQD/bJ0A/5C1AP+0zQA+ACoAXQA/AHwAVACbAGkAugB+ANkA
+        kwDwAKoA/yS2AP9IwgD/bM4A/5DaAP+05gA+AD4AXQBdAHwAfACbAJsAugC6ANkA2QDwAPAA/yT/AP9I
+        /wD/bP8A/5D/AP+0/wAqAD4APwBdAFQAfABpAJsAfgC6AJMA2QCqAPAAtiT/AMJI/wDObP8A2pD/AOa0
+        /wAUAD4AHgBdACgAfAAyAJsAPAC6AEYA2QBVAPAAbST/AIVI/wCdbP8AtZD/AM20/wAGBgYAEhISAB8f
+        HwAsLCwAOTk5AEVFRQBSUlIAX19fAGxsbAB4eHgAhYWFAJKSkgCfn58Aq6urALi4uADFxcUA0tLSAN7e
+        3gDr6+sA+Pj4APD7/wCkoKAAgICAAAAA/wAA/wAAAP//AP8AAAD/AP8A//8AAP///wAAAAAAAKSkpKSk
+        pAAAAAAAAAAApKSkpKSkpKSkpAAAAAAApKSkpKSkpKSkpKSkAAAApKSkpKWlpaWlpaWkpKQAAKSkpKWl
+        paWlpaWlpaSkAKSkpKWlpKSkpKSkpKWlpKSkpKSlpKSkpKSkpKSkpaSkpKSkpKSkpKSkpKSkpKSkpKSk
+        pKSkpKWkpKWkpKSkpKSkpKSkpKWlpKSlpaSkpKSkpKSkpKSlpaSkpaWkpKSkpACkpKSlpaSkpKSlpaSk
+        pAAApKSkpaWkpKSkpaWkpKQAAACkpKSkpKSkpKSkpKQAAAAAAKSkpKSkpKSkpKQAAAAAAAAAAKSkpKSk
+        pAAAAAAA+B8AAOAHAADAAwAAgAEAAIABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAQAAgAEAAMAD
+        AADgBwAA+B8AACgAAAAgAAAAQAAAAAEABAAAAAAAAAIAAAAAAAAAAAAAEAAAABAAAAAAAAAAAACAAACA
+        AAAAgIAAgAAAAIAAgACAgAAAwMDAAICAgAAAAP8AAP8AAAD//wD/AAAA/wD/AP//AAD///8AAAAAAAAA
+        zMzMzAAAAAAAAAAAAAAMzMzMzMzMwAAAAAAAAAAMzMzMzMzMzMzAAAAAAAAAzMzMzMzMzMzMzAAAAAAA
+        DMzMzMzMzMzMzMzAAAAAAMzMzMzP///8zMzMzAAAAAzMzMz////////MzMzAAADMzMzP///MzP///MzM
+        zAAAzMzM//zMzMzMz//MzMwADMzMz//MzMzMzMz//MzMwAzMzP/8zMzMzMzMz//MzMAMzMz/zMzMzMzM
+        zMz/zMzAzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzM
+        zMzMzMzMzMzMzMzMzMzMzP/MzP/MzMzMzMzMzMzMzMz/zMz/zMzMzMzMzMzMzMzM/8zM/8zMzMzMzMzM
+        zMzMz//MzP/8zMzMzMwMzMzMzM/8zMzP/MzMzMzADMzMzMz//MzMz//MzMzMwAzMzMzP/8zMzMz//MzM
+        zMAAzMzM//zMzMzMz//MzMwAAMzMz//MzMzMzMz//MzMAAAMzM/8zMzMzMzMz/zMwAAAAMzMzMzMzMzM
+        zMzMzAAAAAAMzMzMzMzMzMzMzMAAAAAAAMzMzMzMzMzMzMwAAAAAAAAMzMzMzMzMzMzAAAAAAAAAAAzM
+        zMzMzMzAAAAAAAAAAAAAAMzMzMwAAAAAAAD/8A///4AB//4AAH/8AAA/+AAAH/AAAA/gAAAHwAAAA8AA
+        AAOAAAABgAAAAYAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAGAAAABgAAAAcAA
+        AAPAAAAD4AAAB/AAAA/4AAAf/AAAP/4AAH//gAH///AP/ygAAAAgAAAAQAAAAAEACAAAAAAAAAQAAAAA
+        AAAAAAAAAAEAAAABAAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAwMDAAMDcwADwyqYAAAA+AAAA
+        XQAAAHwAAACbAAAAugAAANkAAADwACQk/wBISP8AbGz/AJCQ/wC0tP8AABQ+AAAeXQAAKHwAADKbAAA8
+        ugAARtkAAFXwACRt/wBIhf8AbJ3/AJC1/wC0zf8AACo+AAA/XQAAVHwAAGmbAAB+ugAAk9kAAKrwACS2
+        /wBIwv8AbM7/AJDa/wC05v8AAD4+AABdXQAAfHwAAJubAAC6ugAA2dkAAPDwACT//wBI//8AbP//AJD/
+        /wC0//8AAD4qAABdPwAAfFQAAJtpAAC6fgAA2ZMAAPCqACT/tgBI/8IAbP/OAJD/2gC0/+YAAD4UAABd
+        HgAAfCgAAJsyAAC6PAAA2UYAAPBVACT/bQBI/4UAbP+dAJD/tQC0/80AAD4AAABdAAAAfAAAAJsAAAC6
+        AAAA2QAAAPAAACT/JABI/0gAbP9sAJD/kAC0/7QAFD4AAB5dAAAofAAAMpsAADy6AABG2QAAVfAAAG3/
+        JACF/0gAnf9sALX/kADN/7QAKj4AAD9dAABUfAAAaZsAAH66AACT2QAAqvAAALb/JADC/0gAzv9sANr/
+        kADm/7QAPj4AAF1dAAB8fAAAm5sAALq6AADZ2QAA8PAAAP//JAD//0gA//9sAP//kAD//7QAPioAAF0/
+        AAB8VAAAm2kAALp+AADZkwAA8KoAAP+2JAD/wkgA/85sAP/akAD/5rQAPhQAAF0eAAB8KAAAmzIAALo8
+        AADZRgAA8FUAAP9tJAD/hUgA/51sAP+1kAD/zbQAPgAAAF0AAAB8AAAAmwAAALoAAADZAAAA8AAAAP8k
+        JAD/SEgA/2xsAP+QkAD/tLQAPgAUAF0AHgB8ACgAmwAyALoAPADZAEYA8ABVAP8kbQD/SIUA/2ydAP+Q
+        tQD/tM0APgAqAF0APwB8AFQAmwBpALoAfgDZAJMA8ACqAP8ktgD/SMIA/2zOAP+Q2gD/tOYAPgA+AF0A
+        XQB8AHwAmwCbALoAugDZANkA8ADwAP8k/wD/SP8A/2z/AP+Q/wD/tP8AKgA+AD8AXQBUAHwAaQCbAH4A
+        ugCTANkAqgDwALYk/wDCSP8Azmz/ANqQ/wDmtP8AFAA+AB4AXQAoAHwAMgCbADwAugBGANkAVQDwAG0k
+        /wCFSP8AnWz/ALWQ/wDNtP8ABgYGABISEgAfHx8ALCwsADk5OQBFRUUAUlJSAF9fXwBsbGwAeHh4AIWF
+        hQCSkpIAn5+fAKurqwC4uLgAxcXFANLS0gDe3t4A6+vrAPj4+ADw+/8ApKCgAICAgAAAAP8AAP8AAAD/
+        /wD/AAAA/wD/AP//AAD///8AAAAAAAAAAAAAAAAApKSkpKSkpKQAAAAAAAAAAAAAAAAAAAAAAAAAAACk
+        pKSkpKSkpKSkpKSkpAAAAAAAAAAAAAAAAAAAAACkpKSkpKSkpKSkpKSkpKSkpKQAAAAAAAAAAAAAAAAA
+        pKSkpKSkpKSkpKSkpKSkpKSkpKQAAAAAAAAAAAAAAKSkpKSkpKSkpKSkpKSkpKSkpKSkpKQAAAAAAAAA
+        AACkpKSkpKSkpaWlpaWlpaWlpKSkpKSkpKQAAAAAAAAApKSkpKSlpaWlpaWlpaWlpaWlpaWkpKSkpKQA
+        AAAAAKSkpKSkpaWlpaWkpKSkpKSkpaWlpaWkpKSkpKQAAAAApKSkpKWlpaSkpKSkpKSkpKSkpKSlpaWk
+        pKSkpAAAAKSkpKSlpaWkpKSkpKSkpKSkpKSkpKSlpaWkpKSkpAAApKSkpaWlpKSkpKSkpKSkpKSkpKSk
+        pKSlpaWkpKSkAACkpKSlpaSkpKSkpKSkpKSkpKSkpKSkpKSlpaSkpKQApKSkpKSkpKSkpKSkpKSkpKSk
+        pKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSk
+        pKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSlpaSkpKSkpaWkpKSkpKSkpKSkpKSkpKSkpKSkpKSk
+        pKWlpKSkpKSlpaSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpaWkpKSkpKWlpKSkpKSkpKSkpKSkpKSkpKSk
+        pKSkpKWlpaSkpKSkpaWlpKSkpKSkpKSkpKSkpKSkpKSkpKSkpaWkpKSkpKSkpaWkpKSkpKSkpKSkpACk
+        pKSkpKSkpKWlpaSkpKSkpKSlpaWkpKSkpKSkpKQAAKSkpKSkpKSlpaWkpKSkpKSkpKSlpaWkpKSkpKSk
+        pAAApKSkpKSkpaWlpKSkpKSkpKSkpKSlpaWkpKSkpKSkAAAApKSkpKWlpaSkpKSkpKSkpKSkpKSlpaWk
+        pKSkpAAAAACkpKSkpaWkpKSkpKSkpKSkpKSkpKSlpaSkpKSkAAAAAACkpKSkpKSkpKSkpKSkpKSkpKSk
+        pKSkpKSkpAAAAAAAAACkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKQAAAAAAAAAAACkpKSkpKSkpKSkpKSk
+        pKSkpKSkpKSkAAAAAAAAAAAAAACkpKSkpKSkpKSkpKSkpKSkpKSkpAAAAAAAAAAAAAAAAACkpKSkpKSk
+        pKSkpKSkpKSkpKQAAAAAAAAAAAAAAAAAAAAApKSkpKSkpKSkpKSkpKQAAAAAAAAAAAAAAAAAAAAAAAAA
+        AACkpKSkpKSkpAAAAAAAAAAAAAAAAP/wD///gAH//gAAf/wAAD/4AAAf8AAAD+AAAAfAAAADwAAAA4AA
+        AAGAAAABgAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAYAAAAGAAAABwAAAA8AA
+        AAPgAAAH8AAAD/gAAB/8AAA//gAAf/+AAf//8A//
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAQAEBAQAAEABAAoAQAARgAAABAQAAABAAgAaAUAAG4BAAAgIBAAAQAEAOgCAADWBgAAICAAAAEA
