Update some routines related to EventLog and Collection handling

--- a/WindowsApplication1/ManageMyCollection.resx
+++ b/WindowsApplication1/ManageMyCollection.resx
@@ -127,46 +127,46 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAY
-        CQAAAk1TRnQBSQFMAgEBAgEAATABAAEwAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEB4AA0kBhwJSAVQBpwMgAS8wAANUAawDYgHPA2IBzgNiAc4DYgHOA2IBzgNi
-        Ac4DYgHOA2IBzgNiAc4DYgHPAzABTJAAAxIBGAF1AdkB8gH/AZsB0AHlAf8DQQFyAy0BRQMyAVEBVwJZ
-        AbgBiQHQAegB/wFvAcsB5QH/Ay0BRQMUARwDAgEDEAAD1QH/A/oB/wH3AvkB/wH4AvkB/wH2AvgB/wH2
-        AvgB/wH2AvgB/wH1AvYB/wH1AvYB/wH1AvYB/wH7AvoB/wMuAUiQAAGUAdQB6gH/AWwB3AH2Af8BnQHR
-        AeYB/wFUAZQBrAH/AV8BsgHHAf8BUwG8AdMB/wFPAcQB3gH/AUYBzQHpAf8BUwHKAd8B/wGEAdcB7AH/
-        AyoBQAMcASgDAwEEDAAD1gH/AfsC/AH/A/kB/wHdAdkB1AH/AasBgAFEAf8BmQGKAXMB/wH3AvgB/wH3
-        AvgB/wP3Af8B9gL3Af8B+wL8Af8DLwFJjAABWAJbAbwBeQHdAfkB/wFxAd4B9wH/AaAB0wHnAf8BQQGU
-        Aa0B/wFVAbAByAH/AVUBvAHUAf8BTgHEAd8B/wFHAc0B6gH/AV0B1AHsAf8BhwHYAe0B/wMkATUDHwEt
-        AxABFgMBAQIIAAPWAf8D/AH/AfkC+gH/AfwBtAEZAf8ByAGHARUB/wG1AWwBAAH/AfcBoAEnAf8B9wL4
-        Af8B9wL4Af8D9wH/AfsC/AH/Ay8BSYwAAaIB1QHoAf8BhwHfAfoB/wGBAeIB+AH/AaIB1QHoAf8BPwGU
-        Aa0B/wFSAbABxwH/AVgBvQHVAf8BVQHHAeEB/wFPAc8B6wH/AWUB1gHtAf8BigHaAe4B/wMaASQDFAEb
-        Aw0BEgMGAQgIAAPWAf8B/AL9Af8D+gL/AeABawH/AeIBmAEEAf8B1wGSAQ8B/wHiAY8BCQH/AfgC+QH/
-        A/gB/wH3AvgB/wH8Av0B/wMvAUmMAAGlAdcB6gH/AY4B4QH7Af8BjQHnAfoB/wGfAdkB7QH/AUIBlAGu
-        Af8BVAGtAcUB/wFgAcAB1wH/AV8ByAHgAf8BXAHSAewB/wFwAdkB7wH/AY4B3AHuAf8DDQERAwcBCgMC
-        AQMMAAPWAf8D/QH/A/sB/wHvAeYB3AH/Ad8BrwFQAf8B6QG0AUoB/wHpAaYBJwH/AfgC+QH/Ab8BkAFQ
-        Af8D+AH/AfwC/QH/Ay8BSYwAAagB2QHrAf8BlQHlAf0B/wGaAe0B/AH/AZYB6gH6Af8BRQGVAa4B/wFZ
-        AawBxQH/AWgBwwHZAf8BaAHMAeIB/wFpAdcB7wH/AYAB3QHwAf8DUAGbAwIBAxQAA9YB/wH9Av4B/wP7
-        Af8D+wH/A/oB/wP6Af8B6QGsASwB/wP5Af8B9wGqATgB/wH4AvkB/wP9Af8DLwFJjAABqwHaAe0B/wGb
-        AecB/QH/AaYB8gH9Af8BrgHxAf0B/wFJAZcBrwH/AV4BrwHGAf8BbwHHAdsB/wFyAdAB5QH/AXYB2wHx
-        Af8BogHmAfUB/wMEAQYYAAPWAf8D/gH/AfsC/AH/A/sB/wP7Af8B+gL7Af8B5wGpATQB/wH5AvoB/wH5
-        AbcBRgH/AfgC+QH/Af0C/gH/Ay8BSYwAAa4B3AHvAf8BngHpAf4B/wGvAfYC/wHBAfYB/gH/AU0BmAGw
-        Af8BYwGzAccB/wF3AckB3gH/AYMB1AHoAf8BhwHeAfIB/wGtAeoB9wH/HAAD1gH/A/4B/wP8Af8D/AH/
-        A/sB/wP7Af8B6wGpATgB/wP6Av8B1gEZAf8D+QH/A/4B/wMvAUmMAAGxAd4B8AH/AZ4B6QH+Af8BsgH3
-        Av8B0gH6Av8BUAGaAbIB/wFpAbUBygH/AYQBzQHfAf8BigHYAeoB/wGRAeEB9AH/AbwB7gH5Af8cAAPW
-        Bf8B/AL9Af8D/AH/A/wB/wH7AvwB/wHZAZ8BVAL/AdwBWwH/AdoB1AHQAf8D+gH/Af4D/wMvAUmMAAG0
-        AeAB8gH/AZ4B6QH+Af8BsgH3Av8B3gH8Av8BVAGdAbMB/wFwAboBzQH/AYoB0QHiAf8BkQHbAewB/wGa
-        AeQB9QH/AcoB8gH6Af8cAAPWBf8D/QH/A/0B/wP8Af8D/AH/AeEBqQFMAf8B1gHEAbEF/wPpAf8DzQH/
-        AysBQowAAbYB4gHzAf8BngHpAf4B/wGyAfcC/wH8A/8BWwGiAbgB/wGAAcQB1gH/AZIB1QHmAf8BmQHe
-        Ae8B/wGgAecB9gH/Ac8B8wH6Af8cAAPWBf8D/QH/A/0B/wH8Av0B/wP8Af8B2AGfAU0B/wH7AvwB/wPa
-        Bf8DxAH/AwMBBIwAAbkB4wH0Af8BngHpAf4B/wGyAfcC/wH6Af4C/wFsAbUBxwH/AYwBzgHeAf8BogHm
-        AfQB/wGoAekB9wH/AasB6gH3Af8B1wH1AfwB/xwAA9YF/wH9Av4B/wP9Af8D/QH/A/0B/wP8Af8D/AH/
-        A9wB/wPDAf0DAAEBkAABuwHlAfUB/wGeAekB/gH/Ac8B+QH+Af8BmQHNAd8B/wGSAdgB5wH/AagB6wH3
-        Af8BsQHtAfkB/wHEAfIB+wH/Ad8B+AH9Af8B3gH4Af0B/xwAA9UB/wPVAf8D1QH/A9UB/wPVAf8D1QH/
-        A9UB/wPVAf8D1QH/mAABvAHmAfYB/wG1AfAB/AH/AaUB2AHlAf8BugHuAfcB/wG5AfAB+AH/AakB7AH3
-        Af8BgAGyAbgB9QNRAZ8DOgFgAwsBD9gAAx0BKgNGAX8DEgEY8AABQgFNAT4HAAE+AwABKAMAAUADAAEQ
-        AwABAQEAAQEFAAGAFwAD/wEAAeMB/wHAAQMEAAHAAQMBwAEDBAABwAEBAcABAwQAAYABAAHAAQMEAAGA
-        AQABwAEDBAABgAEBAcABAwQAAYABBwHAAQMEAAGAAQ8BwAEDBAABgAEfAcABAwQAAYABHwHAAQMEAAGA
-        AR8BwAEDBAABgAEfAcABAwQAAYABHwHAAQcEAAGAAR8BwAEfBAABgAEfAv8EAAGPA/8EAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAS
+        CQAAAk1TRnQBSQFMAgEBAgEAAUgBAAFIAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEB4AA0kBhwNSAacDIAEvMAADVAGsA18BzwNeAc4DXgHOA14BzgNeAc4DXgHO
+        A14BzgNeAc4DXgHOA18BzwMwAUyQAAMSARgBcgHZAfIB/wGbAdAB5QH/A0EBcgMtAUUDMgFRA1cBuAGJ
+        AdAB6AH/AWwBywHlAf8DLQFFAxQBHAMCAQMQAAPVAf8D+gH/AfcC+QH/AfgC+QH/AfYC+AH/AfYC+AH/
+        AfYC+AH/AfUC9gH/AfUC9gH/AfUC9gH/AfsC+gH/Ay4BSJAAAZQB1AHqAf8BaQHcAfYB/wGdAdEB5gH/
+        AVEBlAGsAf8BXAGyAccB/wFQAbwB0wH/AUwBxAHeAf8BQwHNAekB/wFQAcoB3wH/AYQB1wHsAf8DKgFA
+        AxwBKAMDAQQMAAPWAf8B+wL8Af8D+QH/Ad0B2QHUAf8BqwGAAUEB/wGZAYoBcAH/AfcC+AH/AfcC+AH/
+        A/cB/wH2AvcB/wH7AvwB/wMvAUmMAANYAbwBdgHdAfkB/wFuAd4B9wH/AaAB0wHnAf8BPgGUAa0B/wFS
+        AbAByAH/AVIBvAHUAf8BSwHEAd8B/wFEAc0B6gH/AVoB1AHsAf8BhwHYAe0B/wMkATUDHwEtAxABFgMB
+        AQIIAAPWAf8D/AH/AfkC+gH/AfwBtAEWAf8ByAGHARIB/wG1AWkBAAH/AfcBoAEkAf8B9wL4Af8B9wL4
+        Af8D9wH/AfsC/AH/Ay8BSYwAAaIB1QHoAf8BhwHfAfoB/wGBAeIB+AH/AaIB1QHoAf8BPAGUAa0B/wFP
+        AbABxwH/AVUBvQHVAf8BUgHHAeEB/wFMAc8B6wH/AWIB1gHtAf8BigHaAe4B/wMaASQDFAEbAw0BEgMG
+        AQgIAAPWAf8B/AL9Af8D+gL/AeABaAH/AeIBmAEBAf8B1wGSAQwB/wHiAY8BBgH/AfgC+QH/A/gB/wH3
+        AvgB/wH8Av0B/wMvAUmMAAGlAdcB6gH/AY4B4QH7Af8BjQHnAfoB/wGfAdkB7QH/AT8BlAGuAf8BUQGt
+        AcUB/wFdAcAB1wH/AVwByAHgAf8BWQHSAewB/wFtAdkB7wH/AY4B3AHuAf8DDQERAwcBCgMCAQMMAAPW
+        Af8D/QH/A/sB/wHvAeYB3AH/Ad8BrwFNAf8B6QG0AUcB/wHpAaYBJAH/AfgC+QH/Ab8BkAFNAf8D+AH/
+        AfwC/QH/Ay8BSYwAAagB2QHrAf8BlQHlAf0B/wGaAe0B/AH/AZYB6gH6Af8BQgGVAa4B/wFWAawBxQH/
+        AWUBwwHZAf8BZQHMAeIB/wFmAdcB7wH/AYAB3QHwAf8DUAGbAwIBAxQAA9YB/wH9Av4B/wP7Af8D+wH/
+        A/oB/wP6Af8B6QGsASkB/wP5Af8B9wGqATUB/wH4AvkB/wP9Af8DLwFJjAABqwHaAe0B/wGbAecB/QH/
+        AaYB8gH9Af8BrgHxAf0B/wFGAZcBrwH/AVsBrwHGAf8BbAHHAdsB/wFvAdAB5QH/AXMB2wHxAf8BogHm
+        AfUB/wMEAQYYAAPWAf8D/gH/AfsC/AH/A/sB/wP7Af8B+gL7Af8B5wGpATEB/wH5AvoB/wH5AbcBQwH/
+        AfgC+QH/Af0C/gH/Ay8BSYwAAa4B3AHvAf8BngHpAf4B/wGvAfYC/wHBAfYB/gH/AUoBmAGwAf8BYAGz
+        AccB/wF0AckB3gH/AYMB1AHoAf8BhwHeAfIB/wGtAeoB9wH/HAAD1gH/A/4B/wP8Af8D/AH/A/sB/wP7
+        Af8B6wGpATUB/wP6Av8B1gEWAf8D+QH/A/4B/wMvAUmMAAGxAd4B8AH/AZ4B6QH+Af8BsgH3Av8B0gH6
+        Av8BTQGaAbIB/wFmAbUBygH/AYQBzQHfAf8BigHYAeoB/wGRAeEB9AH/AbwB7gH5Af8cAAPWBf8B/AL9
+        Af8D/AH/A/wB/wH7AvwB/wHZAZ8BUQL/AdwBWAH/AdoB1AHQAf8D+gH/Af4D/wMvAUmMAAG0AeAB8gH/
+        AZ4B6QH+Af8BsgH3Av8B3gH8Av8BUQGdAbMB/wFtAboBzQH/AYoB0QHiAf8BkQHbAewB/wGaAeQB9QH/
+        AcoB8gH6Af8cAAPWBf8D/QH/A/0B/wP8Af8D/AH/AeEBqQFJAf8B1gHEAbEF/wPpAf8DzQH/AysBQowA
+        AbYB4gHzAf8BngHpAf4B/wGyAfcC/wH8A/8BWAGiAbgB/wGAAcQB1gH/AZIB1QHmAf8BmQHeAe8B/wGg
+        AecB9gH/Ac8B8wH6Af8cAAPWBf8D/QH/A/0B/wH8Av0B/wP8Af8B2AGfAUoB/wH7AvwB/wPaBf8DxAH/
+        AwMBBIwAAbkB4wH0Af8BngHpAf4B/wGyAfcC/wH6Af4C/wFpAbUBxwH/AYwBzgHeAf8BogHmAfQB/wGo
+        AekB9wH/AasB6gH3Af8B1wH1AfwB/xwAA9YF/wH9Av4B/wP9Af8D/QH/A/0B/wP8Af8D/AH/A9wB/wO9
+        Af0DAAEBkAABuwHlAfUB/wGeAekB/gH/Ac8B+QH+Af8BmQHNAd8B/wGSAdgB5wH/AagB6wH3Af8BsQHt
+        AfkB/wHEAfIB+wH/Ad8B+AH9Af8B3gH4Af0B/xwAA9UB/wPVAf8D1QH/A9UB/wPVAf8D1QH/A9UB/wPV
+        Af8D1QH/mAABvAHmAfYB/wG1AfAB/AH/AaUB2AHlAf8BugHuAfcB/wG5AfAB+AH/AakB7AH3Af8BdwGf
+        AaQB9QNRAZ8DOgFgAwsBD9gAAx0BKgNGAX8DEgEY8AABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
+        AQEFAAGAFwAD/wEAAeMB/wHAAQMEAAHAAQMBwAEDBAABwAEBAcABAwQAAYABAAHAAQMEAAGAAQABwAED
+        BAABgAEBAcABAwQAAYABBwHAAQMEAAGAAQ8BwAEDBAABgAEfAcABAwQAAYABHwHAAQMEAAGAAR8BwAED
+        BAABgAEfAcABAwQAAYABHwHAAQcEAAGAAR8BwAEfBAABgAEfAv8EAAGPA/8EAAs=
 </value>
   </data>
   <metadata name="ToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -175,4 +175,20 @@
   <metadata name="ContextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>364, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="ToolStripSplitButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
